fix about me spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -424,6 +424,12 @@ a {
 	}
 }
 
+@media (min-width: 1600px) {
+	.about-container-2-text {
+		width: 45vw;
+	}
+}
+
 .about-more-info {
 	width: 80vw;
 }
